--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,24 +1,63 @@
-<html lang="en">
+<html lang='en'>
 
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Registry</title>
-    <link rel="stylesheet" href="/css/jass.css" />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>TECH BLOGS!!</title>
+    <link
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css'
+      rel='stylesheet'
+      integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH'
+      crossorigin='anonymous'
+    />
+
   </head>
 
   <body>
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        Blogs
-      </h1>
+    <header class='display-flex justify-space-between align-center p-2'>
+      <nav class='navbar navbar-expand-lg bg-body-tertiary'>
+        <div class='container-fluid'>
+          <a class='navbar-brand' href='#'>The Tech Blog</a>
+          <button
+            class='navbar-toggler'
+            type='button'
+            data-bs-toggle='collapse'
+            data-bs-target='#navbarNav'
+            aria-controls='navbarNav'
+            aria-expanded='false'
+            aria-label='Toggle navigation'
+          >
+            <span class='navbar-toggler-icon'></span>
+          </button>
+          <div class='collapse navbar-collapse' id='navbarNav'>
+            <ul class='navbar-nav'>
+              <li class='nav-item'>
+                <a class='nav-link active' aria-current='page' href='#'>Home</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href='#'>Dashboard</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href='#'>Logout</a>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main class="container container-fluid mt-5">
+    <main class='container container-fluid mt-5'>
       {{{body}}}
     </main>
     <footer>
-
+      <h3>Created By Danielle Steger</h3>
     </footer>
+    <script
+      src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js'
+      integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz'
+      crossorigin='anonymous'
+    ></script>
+
   </body>
 
 </html>
