--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
                 <a class='nav-link' href='/dashboard'>Dashboard</a>
               </li>
               <li class='nav-item'>
-                <a class='nav-link' href='#'>Logout</a>
+                <a class='nav-link' href='/login'>Login</a>
               </li>
 
             </ul>
