set up sequelize sessions

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,16 +5,16 @@
       <div class='mb-3'>
         <label for='username' class='form-label'>Username</label>
         <input
-          type='email'
+          type='text'
           class='form-control'
-          id='username'
+          id='username-login'
           aria-describedby='emailHelp'
         />
 
       </div>
       <div class='mb-3'>
         <label for='password' class='form-label'>Password</label>
-        <input type='password' class='form-control' id='password' />
+        <input type='password' class='form-control' id='password-login' />
       </div>
       <button type='submit' class='btn btn-primary'>Submit</button>
 
