--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,27 +1,28 @@
 <div class='card'>
-  <div class='card-header'>Login</div>
+  <div class='card-header'>Sign Up</div>
   <div class="'card-body">
     <form class='login-form'>
       <div class='mb-3'>
+        <label for='username' class='form-label'>Name</label>
+        <input type='text' class='form-control' id='name-login' />
+
+      </div>
+      <div class='mb-3'>
         <label for='username' class='form-label'>Username</label>
-        <input
-          type='text'
-          class='form-control'
-          id='username-login'
-          aria-describedby='emailHelp'
-        />
+        <input type='text' class='form-control' id='username-login' />
 
       </div>
       <div class='mb-3'>
         <label for='password' class='form-label'>Password</label>
         <input type='password' class='form-control' id='password-login' />
       </div>
-      <button type='submit' class='btn btn-primary'>Submit</button>
+      <button type='submit' class='btn btn-primary'>Sign Up</button>
 
     </form>
   </div>
   <div class='card-footer'>
-    <a href='/signup'>Sign Up Instead</a>
+    Already have an account?
+    <a href='/login'>Log In instead!</a>
   </div>
 
 </div>
