--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,20 @@
 <div class='card'>
   <div class='card-header'>Sign Up</div>
   <div class="'card-body">
-    <form class='login-form'>
+    <form class='signup-form'>
       <div class='mb-3'>
         <label for='username' class='form-label'>Name</label>
-        <input type='text' class='form-control' id='name-login' />
+        <input type='text' class='form-control' id='name-signup' />
 
       </div>
       <div class='mb-3'>
         <label for='username' class='form-label'>Username</label>
-        <input type='text' class='form-control' id='username-login' />
+        <input type='text' class='form-control' id='username-signup' />
 
       </div>
       <div class='mb-3'>
         <label for='password' class='form-label'>Password</label>
-        <input type='password' class='form-control' id='password-login' />
+        <input type='password' class='form-control' id='password-signup' />
       </div>
       <button type='submit' class='btn btn-primary'>Sign Up</button>
 
