attempting saving signup infor

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,22 +1,24 @@
 <div class='card'>
   <div class='card-header'>Sign Up</div>
   <div class="'card-body">
-    <form class='signup-form'>
-      <div class='mb-3'>
-        <label for='username' class='form-label'>Name</label>
-        <input type='text' class='form-control' id='name-signup' />
+    <form class='form signup-form'>
+      <div class='mb-3 form-group'>
+        <label for='name-signup' class='form-label'>Name</label>
+        <input type='text' class='form-input' id='name-signup' />
 
       </div>
-      <div class='mb-3'>
-        <label for='username' class='form-label'>Username</label>
-        <input type='text' class='form-control' id='username-signup' />
+      <div class='mb-3 form-group'>
+        <label for='username-signup' class='form-label'>Username</label>
+        <input type='text' class='form-input' id='username-signup' />
 
       </div>
-      <div class='mb-3'>
-        <label for='password' class='form-label'>Password</label>
-        <input type='password' class='form-control' id='password-signup' />
+      <div class='mb-3 form-group'>
+        <label for='password-signup' class='form-label'>Password</label>
+        <input type='password' class='form-input' id='password-signup' />
       </div>
-      <button type='submit' class='btn btn-primary'>Sign Up</button>
+      <div class='form-group'>
+        <button type='submit' class='btn btn-primary'>Sign Up</button>
+      </div>
 
     </form>
   </div>
@@ -26,3 +28,5 @@
   </div>
 
 </div>
+
+<script src='./js/login.js'></script>
