--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,9 +37,16 @@
               <li class='nav-item'>
                 <a class='nav-link' href='/dashboard'>Dashboard</a>
               </li>
-              <li class='nav-item'>
-                <a class='nav-link' href='/login'>Login</a>
-              </li>
+              {{#if logged_in}}
+
+                <li class='nav-item'>
+                  <a class='nav-link' id='logout-nav'>Logout</a>
+                </li>
+              {{else}}
+                <li class='nav-item'>
+                  <a class='nav-link' id='login-nav' href='/login'>Login</a>
+                </li>
+              {{/if}}
 
             </ul>
           </div>
@@ -57,7 +64,7 @@
       integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz'
       crossorigin='anonymous'
     ></script>
-
+    <script src='/js/logout.js'></script>
   </body>
 
 </html>
