added comments render on blog page

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -36,7 +36,7 @@
         <form class='comment-form'>
           <div class='mb-3'>
             <label for='comment' class='form-label'>Comment</label>
-            <input type='text-area' class='form-control' id='comment' />
+            <textarea class='form-input' id='comment' name='comment'></textarea>
           </div>
           <button type='submit' class='btn btn-primary'>Submit</button>
 
@@ -48,3 +48,5 @@
   {{/if}}
 
 </div>
+
+<script src='/js/comment.js'></script>
