--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,51 @@
-<div>
-  <h4>{{name}}'s Dashboard</h4>
+<h4>{{name}}'s Dashboard</h4>
+
+<div id='myBlogsList'>
+  HELLOW
+  {{#each blogs as |blog|}}
+    <a href='/blog/{{blog.id}}'><div class='card'>
+        <div class='card-header'>
+          <p>
+            Blog #1:
+            {{blog.title}}
+
+            Created on:
+            {{formatDate blog.date_created}}
+          </p>
+        </div>
+      </div>
+    </a>
+  {{/each}}
+
 </div>
+
+<div>
+
+  <div id='blogPostForm' class='hidden'>
+    <div class='card'>
+      <div class='card-header'>Create a New Post</div>
+      <div class="'card-body">
+        <form class='post-form'>
+          <div class='mb-3 form-group'>
+            <label for='title' class='form-label'>Title</label>
+            <input type='text' class='form-input' id='title' />
+
+          </div>
+          <div class='mb-3'>
+            <label for='content' class='form-label'>Content</label>
+            <textarea class='form-input' id='content' name='content'></textarea>
+          </div>
+          <button type='submit' class='btn btn-primary'>Create</button>
+
+        </form>
+      </div>
+
+    </div>
+  </div>
+
+  <button type='button' class='btn btn-secondary btn-lg' id='newPostButton'>+
+    New Post</button>
+
+</div>
+
+<script src='/js/dashboard.js'></script>
