--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,48 +3,27 @@
 <div id='myBlogsList' class='visible'>
 
   {{#each blogs as |blog|}}
-    <div class='card myBlogs'>
-      <div class='card-header'>
-        <p>
-          {{blog.title}}
+    <a href='/dashboard/blog/{{blog.id}}'><div class='card myBlogs'>
+        <div class='card-header'>
+          <p>
+            {{blog.title}}
 
-          Created on:
-          {{formatDate blog.date_created}}
-        </p>
+            Created on:
+            {{formatDate blog.date_created}}
+          </p>
+        </div>
       </div>
-    </div>
+    </a>
 
   {{/each}}
 
 </div>
 
-<div>
-
-  <div id='blogPostForm' class='hidden'>
-    <div class='card'>
-      <div class='card-header'>Create a New Post</div>
-      <div class="'card-body">
-        <form class='post-form'>
-          <div class='mb-3 form-group'>
-            <label for='title' class='form-label'>Title</label>
-            <input type='text' class='form-input' id='title' />
-
-          </div>
-          <div class='mb-3'>
-            <label for='content' class='form-label'>Content</label>
-            <textarea class='form-input' id='content' name='content'></textarea>
-          </div>
-          <button type='submit' class='btn btn-primary'>Create</button>
-
-        </form>
-      </div>
-
-    </div>
-  </div>
-
-  <button type='button' class='btn btn-secondary btn-lg' id='newPostButton'>+
-    New Post</button>
-
-</div>
+<button
+  type='button'
+  class='btn btn-secondary btn-lg'
+  id='newPostButton'
+  href='/dashboard/new'
+>+ New Post</button>
 
 <script src='/js/dashboard.js'></script>
