--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,13 @@
       crossorigin='anonymous'
     />
     <link rel='stylesheet' href='/css/style.css' />
+    <link rel='stylesheet' href='/scss/custom.scss' />
 
   </head>
 
   <body>
-    <header class='display-flex justify-space-between align-center p-2'>
-      <nav class='navbar navbar-expand-lg bg-body-tertiary'>
+    <header class='display-flex justify-space-between align-center'>
+      <nav class='navbar navbar-expand-lg bg-body-purple p-3'>
         <div class='container-fluid'>
           <a class='navbar-brand' href='#'>The Tech Blog</a>
           <button
@@ -57,7 +58,7 @@
     <main class='container container-fluid mt-5'>
       {{{body}}}
     </main>
-    <footer>
+    <footer class='footer'>
       <h3>Created By Danielle Steger</h3>
     </footer>
     <script
