--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,13 +11,12 @@
       crossorigin='anonymous'
     />
     <link rel='stylesheet' href='/css/style.css' />
-    <link rel='stylesheet' href='/scss/custom.scss' />
 
   </head>
 
   <body>
     <header class='display-flex justify-space-between align-center'>
-      <nav class='navbar navbar-expand-lg bg-body-purple p-3'>
+      <nav class='navbar navbar-expand-lg bg-body-primary p-3'>
         <div class='container-fluid'>
           <a class='navbar-brand' href='#'>The Tech Blog</a>
           <button
