--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,9 @@
 <div class='card'>
-  <div class='card-header'>Login</div>
+  <div class='card-header pt-3'><h3>Login</h3></div>
   <div class="'card-body">
-    <form class='login-form'>
-      <div class='mb-3'>
-        <label for='username' class='form-label'>Username</label>
+    <form class='login-form form-control'>
+      <div class='m-3'>
+        <label for='username' class='form-label'>Username:</label>
         <input
           type='text'
           class='form-control'
@@ -12,16 +12,17 @@
         />
 
       </div>
-      <div class='mb-3'>
-        <label for='password' class='form-label'>Password</label>
+      <div class='m-3'>
+        <label for='password' class='form-label'>Password:</label>
         <input type='password' class='form-control' id='password-login' />
       </div>
-      <button type='submit' class='btn btn-primary'>Submit</button>
+      <button type='submit' class='btn btn-primary m-3'>Submit</button>
 
     </form>
   </div>
-  <div class='card-footer'>
-    <a href='/signup'>Sign Up Instead</a>
+  <div class='card-footer p-3'>Don't have an account yet?
+    <a href='/signup'><buttom class='btn btn-secondary btn-sm mx-2'>Sign Up
+        Instead</buttom></a>
   </div>
 
 </div>
