--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,30 +1,39 @@
 <div class='card'>
-  <div class='card-header'>Sign Up</div>
+  <div class='card-header pt-3'><h3>Sign Up</h3></div>
   <div class="'card-body">
-    <form class='form signup-form'>
-      <div class='mb-3 form-group'>
-        <label for='name-signup' class='form-label'>Name</label>
-        <input type='text' class='form-input' id='name-signup' />
+    <form class='form-control signup-form'>
+      <div class='m-3 form-group'>
+        <label for='name-signup' class='form-label'>Name:</label>
+        <input type='text' class='form-input form-control' id='name-signup' />
 
       </div>
-      <div class='mb-3 form-group'>
-        <label for='username-signup' class='form-label'>Username</label>
-        <input type='text' class='form-input' id='username-signup' />
+      <div class='m-3 form-group'>
+        <label for='username-signup' class='form-label'>Username:</label>
+        <input
+          type='text'
+          class='form-input form-control'
+          id='username-signup'
+        />
 
       </div>
-      <div class='mb-3 form-group'>
-        <label for='password-signup' class='form-label'>Password</label>
-        <input type='password' class='form-input' id='password-signup' />
+      <div class='m-3 form-group'>
+        <label for='password-signup' class='form-label'>Password:</label>
+        <input
+          type='password'
+          class='form-input form-control'
+          id='password-signup'
+        />
       </div>
       <div class='form-group'>
-        <button type='submit' class='btn btn-primary'>Sign Up</button>
+        <button type='submit' class='btn btn-primary m-3'>Sign Up</button>
       </div>
 
     </form>
   </div>
-  <div class='card-footer'>
+  <div class='card-footer p-3'>
     Already have an account?
-    <a href='/login'>Log In instead!</a>
+    <a href='/login'><button class='btn btn-secondary btn-sm mx-2'>Log In
+        instead!</button></a>
   </div>
 
 </div>
