--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,11 +14,12 @@
 
   </head>
 
-  <body>
+  <body class='bg-danger'>
     <header class='display-flex justify-space-between align-center'>
-      <nav class='navbar navbar-expand-lg bg-body-primary p-3'>
+      <nav class='navbar navbar-expand-lg navbar-dark bg-dark p-3'>
         <div class='container-fluid d-flex justify-content-between'>
-          <div><a class='navbar-brand' href='/'><h3>The Tech Blog</h3></a>
+          <div><a class='navbar-brand' href='/'><h3 class='text-light'>The Tech
+                Blog</h3></a>
           </div>
           <div>
             <button
@@ -35,11 +36,7 @@
             <div class='collapse navbar-collapse' id='navbarNav'>
               <ul class='navbar-nav'>
                 <li class='nav-item'>
-                  <a
-                    class='nav-link active'
-                    aria-current='page'
-                    href='/'
-                  >Home</a>
+                  <a class='nav-link' aria-current='page' href='/'>Home</a>
                 </li>
                 <li class='nav-item'>
                   <a class='nav-link' href='/dashboard'>Dashboard</a>
@@ -61,11 +58,11 @@
         </div>
       </nav>
     </header>
-    <main class='container container-fluid mt-5'>
+    <main class='container-fluid pt-5 bg-danger'>
       {{{body}}}
     </main>
-    <footer class='footer text-center m-5'>
-      <h3>Created By Danielle Steger</h3>
+    <footer class='footer text-center p-5 bg-light h-100'>
+      <h5>Created By Danielle Steger</h5>
     </footer>
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js'
