--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <div class='card col-6'>
     <div class='card-header pt-3'><h3>Login</h3></div>
     <div class="'card-body">
-      <form class='login-form form-control'>
+      <form class='login-form'>
         <div class='m-3'>
           <label for='username' class='form-label'>Username:</label>
           <input
