--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4450,7 +4450,7 @@ fieldset:disabled .btn {
   );
   --bs-card-cap-padding-y: 0.5rem;
   --bs-card-cap-padding-x: 1rem;
-  --bs-card-cap-bg: rgba(var(--bs-body-color-rgb), 0.03);
+  --bs-card-cap-bg: #51303e, 0.03;
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
