--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,6 +1,6 @@
-<div class='justify-content-center'>
-  <div class=''>
-    <div class='card col-12 m-2'>
+<div class=''>
+  <div class='d-flex justify-content-center'>
+    <div class='card col-10 m-2'>
       <div class='card-header d-flex justify-content-between'>
         <h3>{{title}}</h3>
         <div>
@@ -10,16 +10,17 @@
             {{formatDate date_created}}</p></div>
       </div>
 
-      <div class='card-body'>
-        <p class='card-text'>{{content}}</p>
+      <div class='card-footer'>
+        <p class='card-text my-3'>{{content}}</p>
       </div>
+
     </div>
   </div>
 
   <div class='row d-flex justify-content-center'>
     {{#each comments as |comment|}}
 
-      <div class='card col-11 m-2'>
+      <div class='card col-9 m-2'>
         <div class='card-body'>
           <div class='d-flex row align-items-center mt-2'>
             <p class='card-text'>{{comment.content}}</p>
@@ -35,9 +36,9 @@
 
   <div class='d-flex justify-content-center'>
     {{#if logged_in}}
-      <div class='card col-11 m-4'>
+      <div class='card col-9 m-4'>
         <div class='card-header'>Add A Comment</div>
-        <div class='card-body'>
+        <div class='card-footer'>
           <form class='comment-form'>
             <div class='m-4'>
               <textarea
