--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,33 +1,35 @@
-<div class='card'>
-  <div class='card-header'>
-    <h4>{{name}}'s Dashboard</h4>
-  </div>
+<div class='d-flex justify-content-center'>
+  <div class='card col-10'>
+    <div class='card-header'>
+      <h4>{{name}}'s Dashboard</h4>
+    </div>
 
-  <div class='card-body'>
+    <div class='card-body'>
 
-    {{#each blogs as |blog|}}
-      <div class='m-3'>
-        <a href='/dashboard/blog/{{blog.id}}'><div class='card myBlogs'>
-            <div class='btn btn-secondary d-flex justify-content-between'>
-              <h3 class='mt-1'>{{blog.title}}</h3>
-              <h5 class='mt-3'>Created on:
-                {{formatDate blog.date_created}}</h5>
+      {{#each blogs as |blog|}}
+        <div class='m-3'>
+          <a href='/dashboard/blog/{{blog.id}}'><div class='card myBlogs'>
+              <div class='btn btn-secondary d-flex justify-content-between'>
+                <h3 class='mt-1'>{{blog.title}}</h3>
+                <h5 class='mt-3'>Created on:
+                  {{formatDate blog.date_created}}</h5>
 
+              </div>
             </div>
-          </div>
-        </a>
-      </div>
+          </a>
+        </div>
 
-    {{/each}}
+      {{/each}}
 
-  </div>
-  <div class='d-flex justify-content-center mb-4'>
-    <button
-      type='button'
-      class='btn btn-primary btn-lg'
-      id='newPostButton'
-      href='/dashboard/new'
-    >+ New Post</button>
+    </div>
+    <div class='d-flex justify-content-center mb-4'>
+      <button
+        type='button'
+        class='btn btn-primary btn-lg'
+        id='newPostButton'
+        href='/dashboard/new'
+      >+ New Post</button>
+    </div>
   </div>
 </div>
 <script src='/js/dashboard.js'></script>
