--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,21 @@
-<div>{{#each blogs as |blog|}}
-    <a href='/blog/{{blog.id}}'><div class='card m-4'>
-        <div class='card-header d-flex justify-content-between'>
-          <h3>{{blog.title}}</h3>
-          <div>
-            <p>Created by
-              {{blog.user.name}}
-              on
-              {{formatDate blog.date_created}}</p></div>
-        </div>
-        <div class='card-body'>
-          <h5 class='card-title'></h5>
-          <p class='card-text'>{{blog.content}}</p>
+<div class='d-flex justify-content-center row'>
+  {{#each blogs as |blog|}}
+    <div class='col-10'>
+      <a href='/blog/{{blog.id}}'><div class='card m-4'>
+          <div class='card-header d-flex justify-content-between'>
+            <h3>{{blog.title}}</h3>
+            <div>
+              <p>Created by
+                {{blog.user.name}}
+                on
+                {{formatDate blog.date_created}}</p></div>
+          </div>
+          <div class='card-footer'>
 
+            <p class='card-text my-3'>{{blog.content}}</p></div>
         </div>
-      </div>
-    </a>
+      </a>
+    </div>
   {{/each}}
+
 </div>
