--- a/views/modifypost.handlebars
+++ b/views/modifypost.handlebars
@@ -1,47 +1,48 @@
-<h4 class='display-4'>{{user.name}}'s Dashboard</h4>
+<h4 class='display-4 mx-5'>{{user.name}}'s Dashboard</h4>
+<div class='d-flex justify-content-center'>
+  <div id='blogPostForm' class='col-9'>
+    <div class='card mt-5'>
+      <div class='card-header pt-3'><h4>Update A Post</h4></div>
+      <div class="'card-body">
+        <form class='post-form'>
+          <div class='m-3 form-group'>
+            <label for='title' class='form-label'>Title</label>
+            <input
+              type='text'
+              class='form-input form-control'
+              id='title'
+              value='{{title}}'
+            />
 
-<div id='blogPostForm'>
-  <div class='card'>
-    <div class='card-header pt-3'><h4>Update A Post</h4></div>
-    <div class="'card-body">
-      <form class='post-form form-control'>
-        <div class='m-3 form-group'>
-          <label for='title' class='form-label'>Title</label>
-          <input
-            type='text'
-            class='form-input form-control'
-            id='title'
-            value='{{title}}'
-          />
+          </div>
+          <div class='m-3'>
+            <label for='content' class='form-label'>Content</label>
+            <textarea
+              class='form-input form-control'
+              id='content'
+              name='content'
+              rows='10'
+            >
 
-        </div>
-        <div class='m-3'>
-          <label for='content' class='form-label'>Content</label>
-          <textarea
-            class='form-input form-control'
-            id='content'
-            name='content'
-            rows='10'
-          >
+              {{content}}</textarea>
+          </div>
+          <div class='mx-3 d-flex justify-content-center'>
+            <button
+              type='button'
+              class='btn btn-primary mx-3'
+              id='updateButton'
+            >Update</button>
+            <button
+              type='button'
+              class='btn btn-primary mx-3'
+              id='deletePostButton'
+            >Delete</button>
 
-            {{content}}</textarea>
-        </div>
-        <div class='mx-3 d-flex justify-content-center'>
-          <button
-            type='button'
-            class='btn btn-primary mx-3'
-            id='updateButton'
-          >Update</button>
-          <button
-            type='button'
-            class='btn btn-primary mx-3'
-            id='deletePostButton'
-          >Delete</button>
+          </div>
+        </form>
+      </div>
 
-        </div>
-      </form>
     </div>
-
   </div>
 </div>
 
