--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
   <div class='card col-6'>
     <div class='card-header pt-3'><h3>Sign Up</h3></div>
     <div class="'card-body">
-      <form class='form-control signup-form'>
+      <form class='signup-form'>
         <div class='m-3 form-group'>
           <label for='name-signup' class='form-label'>Name:</label>
           <input type='text' class='form-input form-control' id='name-signup' />
