adjusted colors and removed excess css information

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 
   <body class='bg-danger'>
     <header class='display-flex justify-space-between align-center'>
-      <nav class='navbar navbar-expand-lg navbar-dark bg-dark p-3'>
+      <nav class='navbar navbar-expand-lg bg-primary p-3'>
         <div class='container-fluid d-flex justify-content-between'>
           <div><a class='navbar-brand' href='/'><h3 class='text-light'>The Tech
                 Blog</h3></a>
@@ -61,7 +61,7 @@
     <main class='container-fluid pt-5 bg-danger'>
       {{{body}}}
     </main>
-    <footer class='footer text-center p-5 bg-light h-100'>
+    <footer class='footer text-center p-5 bg-danger h-100'>
       <h5>Created By Danielle Steger</h5>
     </footer>
     <script
