--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,8 @@
+<h4 class='display-4 mx-5 text-center'> - {{name}}'s Dashboard - </h4>
 <div class='d-flex justify-content-center'>
   <div class='card col-10'>
-    <div class='card-header'>
-      <h4>{{name}}'s Dashboard</h4>
+    <div class='card-header light'>
+
     </div>
 
     <div class='card-body'>
