--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,4 +1,4 @@
-<h4 class='display-4 mx-5'>{{name}}'s Dashboard</h4>
+<h4 class='display-4 mx-5 text-center'> - {{name}}'s Dashboard - </h4>
 <div class='d-flex justify-content-center'>
   <div id='blogPostForm' class='col-9'>
     <div class='card mt-5'>
