user updated to user2 - seeds do not function but page does

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -5,7 +5,7 @@
         <h3>{{title}}</h3>
         <div>
           <p>Created by
-            {{user.name}}
+            {{user2.name}}
             on
             {{formatDate date_created}}</p></div>
       </div>
@@ -26,7 +26,7 @@
             <p class='card-text'>{{comment.content}}</p>
             <p>
               -
-              {{comment.user.name}}
+              {{comment.user2.name}}
               {{formatDate comment.date_created}}</p>
           </div>
         </div>
