--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
             <h3>{{blog.title}}</h3>
             <div>
               <p>Created by
-                {{blog.user.name}}
+                {{blog.user2.name}}
                 on
                 {{formatDate blog.date_created}}</p></div>
           </div>
