--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,7 +62,12 @@
       {{{body}}}
     </main>
     <footer class='footer text-center p-5 bg-danger h-100'>
-      <h5>Created By Danielle Steger</h5>
+      <h5>Created By
+        <a
+          href='https://danimsteger.github.io/danielle-steger-portfolio/'
+          class='link-dark'
+          target='_blank'
+        >Danielle Steger</a></h5>
     </footer>
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js'
